<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Text -->
    <string name="app_name">暗唱聖句60</string>
    <string name="title_text">ローマ</string>
    <string name="statement_text">○○</string>
	<string name="remark_text">■ コヘレトの言葉 7章14節\n順境には楽しめ、逆境にはこう考えよ。\n人が未来について無知であるようにと\n神はこの両者を併せて造られた、と</string>
	<string name="count_text">count</string>
	
    <!-- Button -->
    <string name="open_button">開く</string>
    <string name="close_button">閉じる</string>
    <string name="end_button">終了</string>
    <string name="reorder_start_button">順序入れ替え(60問)</string>
    <string name="random_start_button">ランダム生成</string>
    <string name="random_button">次</string>
    <string name="next_button">次</string>
    <string name="back_button">前</string>

    <!-- image -->
    <string name="desc">謎画像</string>
    
    <!-- menu -->
    <string name="action_settings">Settings</string>

</resources>
