<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_text" />

    <TextView
        android:id="@+id/statement_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/title_text"
        android:layout_below="@+id/title_text"
        android:text="@string/statement_text" />

    <Button
        android:id="@+id/open_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/statement_text"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:text="@string/open_button" />

    <Button
        android:id="@+id/random_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/open_button"
        android:layout_alignBottom="@+id/open_button"
        android:layout_toRightOf="@+id/open_button"
        android:text="@string/random_button" />

    <Button
        android:id="@+id/end_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/random_button"
        android:layout_alignBottom="@+id/random_button"
        android:layout_alignParentRight="true"
        android:text="@string/end_button" />

    <TextView
        android:id="@+id/count_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/statement_text"
        android:layout_alignRight="@+id/end_button"
        android:text="@string/count_text" />

</RelativeLayout>